plugins {
    id "se.inera.intyg.plugin.common" version "3.2.0" apply false
    id "io.spring.dependency-management" version "1.0.13.RELEASE"
    id 'idea'
}

ext {
    funktionstjansterGrpSchemasVersion = "1.0.6"

    rivtaDirectoryOrganizationSchemasVersion = "1.1.RC5.6"
    rivtaStoreLogSchemasVersion = "2.0.1"
    rivtaHsaAuthorizationmanagementSchemasVersion = "1.0.RC4.6"
    rivtaHsaEmployeeSchemasVersion = "1.0.RC4.6"
    rivtaGetPersonsPersonSchemasVersion = "3.1.1"

    intygClinicalprocessSchemasVersion = "1.0.24"

    srsSchemasVersion = "0.0.16"

    schemasContractVersion = "2.1.8"

    commonsIoVersion = "2.11.0"
    commonsCollectionsVersion = "4.4"
    cxfVersion = "3.5.3"
    embeddedRedisVersion = "0.7.2"
    guavaVersion = "31.1-jre"
    jakartaJwsApiVersion = "3.0.0"
    jaxb2Version = "0.13.1"
    jaxb2NamespacePrefixVersion = "2.0"
    jaxbImplVersion = "2.3.6"
    saxonVersion = "11.4"
    shedlockSpringVersion = "4.42.0"
    springSecuritySaml2CoreVersion = "1.0.3.RELEASE" //Higher versions require opensaml 2.6.6 (not available 2020-03-23)
    uapVersion = "1.5.3"
    xmlSecVersion = "3.0.1"

    springbootMavenBomVersion = "2.7.3"
}

allprojects {
    apply plugin: 'se.inera.intyg.plugin.common'
    apply plugin: 'maven'

    repositories {
        mavenLocal()
        maven { url "https://nexus.drift.inera.se/repository/it-public/" }
        mavenCentral {
            content {
                // this repository contains everything BUT artifacts with group starting with "se.inera"
                excludeGroupByRegex "se\\.inera.*"
            }
        }
    }

    test {
        useJUnitPlatform()
    }

    apply plugin: "io.spring.dependency-management"

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}"
        }
    }

    dependencies {
        compile "javax.annotation:javax.annotation-api"
        compile "jakarta.xml.bind:jakarta.xml.bind-api"
        compile "jakarta.xml.ws:jakarta.xml.ws-api"
        compile "jakarta.jws:jakarta.jws-api:${jakartaJwsApiVersion}"

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'

        testCompile "org.glassfish.jaxb:jaxb-runtime"
        testCompile "com.sun.xml.messaging.saaj:saaj-impl"

        testCompile "junit:junit"
        testCompile "org.junit.jupiter:junit-jupiter-api"
        testCompile "org.junit.jupiter:junit-jupiter-params"
        testCompile "org.mockito:mockito-junit-jupiter"
        testCompile "org.springframework:spring-test"
        testCompile "org.mockito:mockito-core"

        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
        testRuntimeOnly "org.junit.vintage:junit-vintage-engine"
    }

    group = 'se.inera.intyg.infra'
    version = System.properties['buildVersion'] ?: '3.18.0-SNAPSHOT'

    compileJava.options.encoding = 'UTF-8'

    sourceCompatibility = 11
    targetCompatibility = 11

    task createVersionPropertyFile(type: VersionPropertyFileTask)

    uploadArchives.repositories.mavenDeployer {
        repository(url: "https://nexus.drift.inera.se/repository/maven-releases/") {
            authentication(userName: System.properties['ineraNexusUsername'], password: System.properties['ineraNexusPassword'])
        }
    }
}

task tagRelease(type: TagReleaseTask)
